<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bgandroid"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/txtwelwcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/size_welcome"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_register_top"
        android:layout_below="@id/txtwelwcome"
        android:layout_marginRight="@dimen/card_register_horizontal"
        android:layout_marginLeft="@dimen/card_register_horizontal"
        app:contentPadding="@dimen/card_register_padding"
        app:cardElevation="@dimen/card_register_elev"
        app:cardBackgroundColor="@color/transparanku"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparanku"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_personal_info"
                android:text="@string/enter_info"/>

            <EditText
                android:id="@+id/ed_nama"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_padding"
                android:background="@android:color/white"
                android:padding="@dimen/edittext_padding"
                android:hint="@string/nama"
                android:autofillHints="@string/nama"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/ed_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_padding"
                android:background="@android:color/white"
                android:padding="@dimen/edittext_padding"
                android:hint="@string/email"
                android:autofillHints="@string/email"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/ed_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_padding"
                android:background="@android:color/white"
                android:padding="@dimen/edittext_padding"
                android:hint="@string/Password"
                android:autofillHints="@string/Password"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/ed_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/edittext_padding"
                android:background="@android:color/white"
                android:padding="@dimen/edittext_padding"
                android:hint="@string/confirm_password"
                android:autofillHints="@string/confirm_password"
                tools:targetApi="o" />

            <Button
                android:onClick="onBtnSignClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_in"
                android:layout_marginTop="@dimen/edittext_padding"
                android:background="@color/warna_tombol"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>

<!--crtl + alt + o : untuk mengoptimalkan (menghapus yang use less)-->